Fix toc z-index

--- a/_sass/theme/_toc.scss
+++ b/_sass/theme/_toc.scss
@@ -5,6 +5,7 @@
     margin: 0 0 0 1rem;
     padding: 0;
     border-radius: 8px 8px 0 0;
+    z-index: auto;
     ul {
       margin: 0;
       padding: 0;
